--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "serve-build": "^0.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
